testdata/baselines/reference/submodule/conformance/exportedEnumTypeAndValue.errors.txt
use.js(3,12): error TS2749: 'MyEnum' refers to a value, but is being used as a type here. Did you mean 'typeof MyEnum'?
use.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.


==== def.js (0 errors) ====
    /** @enum {number} */
    const MyEnum = {
      a: 1,
      b: 2
    };
    export default MyEnum;
    
==== use.js (2 errors) ====
    import MyEnum from "./def";
    
    /** @type {MyEnum} */
               ~~~~~~
!!! error TS2749: 'MyEnum' refers to a value, but is being used as a type here. Did you mean 'typeof MyEnum'?
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const v = MyEnum.b;
    